--- a/CSharpModelClassGenerator/ClassSelectionWindow.xaml
+++ b/CSharpModelClassGenerator/ClassSelectionWindow.xaml
@@ -1,9 +1,17 @@
 ﻿<Window x:Class="CSharpModelClassGenerator.ClassSelectionWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Seleziona Classe" Height="250" Width="400">
+        Title="Seleziona Classe" Height="300" Width="400">
     <Grid>
-        <ListBox Name="ClassList" Margin="10" SelectionMode="Single"/>
+        <!-- Barra di ricerca -->
+        <TextBox Name="SearchTextBox" Margin="10,10,10,0" VerticalAlignment="Top" 
+                 HorizontalAlignment="Stretch" Height="25" 
+                 TextChanged="OnSearchTextChanged" />
+
+        <!-- Lista delle classi -->
+        <ListBox Name="ClassList" Margin="10,40,10,10" SelectionMode="Single"/>
+
+        <!-- Bottone di selezione -->
         <Button Content="Seleziona" HorizontalAlignment="Right" Margin="10" VerticalAlignment="Bottom" Width="80"
                 Click="OnSelectClick"/>
     </Grid>
